--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>イヌキのTODO</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
@@ -28,6 +28,6 @@
       </div>
     </div>
 
-    <script src="./src/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
